# Agentic-order-management

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/agent/: order_agent.py  response_agent.py  sql_agent.py  supervisor_agent.py
app/config/: env_config.py  log_config.py
app/constants/: app_constants.py
app/db/: database.py
app/graph/: graph.py  nodes.py  state.py
app/graph/cancel_order/: graph.py  nodes.py  state.py
app/llms/: openai_chat_client.py
app/memory/: __init__.py  session_memory.py
app/middleware/: log_middleware.py
app/models/: inventory.py  order.py
app/prompts/: order_agent_prompt.py  response_agent_prompt.py  sql_agent_prompt.py  supervisor_prompt.py
app/pydantic_tools/inventory/: check_product.py  check_product_with_vector_id.py  get_product.py  update_stock.py
app/repository/: qdrant_repo.py
app/routes/: chat_routes.py  ingestion_routes.py
app/services/: ingestion_service.py
app/tools/: __init__.py  audit.py  email.py  inventory.py  order.py
app/utils/: embedding_utils.py  pdf_plumber_utils.py
examples/: inventory_data.csv  langraph.ipynb  load_data.ipynb  order_agent.ipynb  order_agent_sql_alchaemy.ipynb  pdf_ex.ipynb  pdf_extractor.ipynb  pdf_extractor_2.ipynb  pdf_plumber.ipynb
examples/agent/: hil.ipynb  langgarph.ipynb  sql_agent.ipynb  tools.ipynb
logs/: app.log.2026-04-15  app.log.2026-04-16  app.log.2026-04-17  app.log.2026-04-18  app.log.2026-04-19  app.log.2026-04-20  app.log.2026-04-21  app.log.2026-04-22
qdrant_storage/: raft_state.json
(+15 files in other folders)
